--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<div id="intro">
 						<h1>The inquirer Portfolio<br />
 </h1>
-						<p>Data Analyst skilled in SQL,Tableau, Python, and Software Testing <a href="https://www.linkedin.com/">@Barbara</a> 
+						<p>Data Analyst skilled in SQL,Tableau, Python, and Software Testing <a href="https://www.linkedin.com/">"theinquirer"</a> 
 						<ul class="Portfolio">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -29,7 +29,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo"></a>
+						<a href="index.html" class="logo"> the inquirer</a>
 					</header>
 
 				<!-- Nav -->
@@ -82,7 +82,7 @@
 										</a></h2>
 									</header>
 									<a href="https://public.tableau.com/app/profile/barbara1616/viz/AirBNB_rental/Dashboard1" class="image fit"><img src="images/tableau.jpg" alt=" "/></a>
-									</p> A collections of  data analysis projects utlizing tableau dashbaord</p>
+									</p> A collections of  data analysis projects utlizing tableau dashboard</p>
 									<ul class="actions special">
 										<li><a href="https://public.tableau.com/app/profile/barbara1616/viz/AirBNB_rental/Dashboard1" class=  "button large">View Project</a></li>
 									</ul>
